Bot now checks each proxy's validity before starting